added favorite things list

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>My Favorite Things</h1>
+    <h2>by Molly</h2>
     
+    <div id="favorite-things">
+        <h3 id="animal">Animal</h3>
+        <p>My favorite animal is a cat</p>
+
+        <h3 id="color">Color</h3>
+        <p>My favorite color is a blue</p>
+
+        <h3 id="food">Food</h3>
+        <p>My favorite food is fries</p>
+
+        <h3 id="season">Season</h3>
+        <p>My favorite season is a fall</p>
+
+        <h3 id="tv-show">TV show</h3>
+        <p>My favorite TV show is a Sonny with a Chance</p>
+    </div>
 </body> 
-<h1>Hello World!</h1>
 </html>
